--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.28.3",
     "react-responsive": "^10.0.0",
-    "three": "^0.171.0"
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
+    "threejs_portfolio": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
