--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.120.4",
     "@react-three/eslint-plugin": "^0.1.1",
     "@react-three/fiber": "^8.17.10",
+    "@vercel/analytics": "^1.4.1",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
