--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.28.3",
+    "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^7.9.5",
     "three": "^0.171.0",
     "three-stdlib": "^2.35.2",
     "threejs_portfolio": "file:"
