--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.28.3",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.9.5",
