--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/eslint-plugin": "^0.1.1",
     "@react-three/fiber": "^8.17.10",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.2.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
